syntax = "proto3";

import "google/protobuf/any.proto";

package grpcwebsockets;
option go_package = "./rpcheader";

message Rpc {
    uint64 id = 1;
    RequestHeader header = 2;
    ResponseStatus status = 3;
    Body body = 4;  // Request or response body (protobuf data)

    // TODO: responses
    //Complete complete = 5;
    //Failure failure = 6;
    //Cancel cancel = 7;
}

message RequestHeader {
    string method = 1;
    repeated KeyValue headers = 2;
}

// Based on https://cloud.google.com/apis/design/errors
// See: https://github.com/googleapis/googleapis/blob/master/google/rpc/status.proto
message ResponseStatus {
    int32 code = 1;
    string message = 2;
    repeated google.protobuf.Any details = 3;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message Body {
    bytes data = 1;
}
